--- a/src/main/resources/templates/fragments/exchange.html
+++ b/src/main/resources/templates/fragments/exchange.html
@@ -32,6 +32,7 @@
                 <label for="amountInput" class="form-label">금액 입력</label>
                 <div class="input-group">
                     <input type="text" class="form-control" id="amountInput" placeholder="금액 입력">
+                    <span class="ms-2 fw-bold" id="selectCurrency"></span>
                 </div>
             </div>
 
@@ -62,7 +63,7 @@
     <div class="mt-4">
         <h4 class="text-center">환전 결과</h4>
         <p class="text-center fs-5">
-            <span id="resultAmount">0</span> <span id="resultCurrency"></span>
+            <span id="resultAmount">0</span> <span class="fw-bold" id="resultCurrency"></span>
         </p>
     </div>
 </div>
