--- a/src/main/resources/templates/fragments/exchange.html
+++ b/src/main/resources/templates/fragments/exchange.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<div th:fragment="main">
+<div th:fragment="main" class="border border-primary rounded-3 p-3 container mt-3">
 <div class="container mt-5">
     <h2 class="mb-4 text-center">환전 계산기</h2>
 
@@ -31,8 +31,8 @@
             <div class="col-md-4">
                 <label for="amountInput" class="form-label">금액 입력</label>
                 <div class="input-group">
-                    <input type="text" class="form-control" id="amountInput" placeholder="금액 입력">
-                    <span class="ms-2 fw-bold" id="selectCurrency"></span>
+                    <input type="text" class="form-control text-end" id="amountInput" placeholder="금액 입력">
+                    <span class="input-group-text fw-bold" id="selectCurrency"></span>
                 </div>
             </div>
 
@@ -60,12 +60,13 @@
 
 
     <!-- 계산 결과 표시 -->
-    <div class="mt-4">
+    <div class="mt-4 border border-primary rounded p-3 shadow-sm text-center w-25 mx-auto">
         <h4 class="text-center">환전 결과</h4>
         <p class="text-center fs-5">
             <span id="resultAmount">0</span> <span class="fw-bold" id="resultCurrency"></span>
         </p>
     </div>
+
 </div>
 </div>
 
