--- a/src/main/resources/templates/page/graph.html
+++ b/src/main/resources/templates/page/graph.html
@@ -8,7 +8,9 @@
 <body>
   <header th:replace="~{layout/header :: header}"></header>
 
-  <h1 th:text="${message}"></h1>
+  <main>
+      <div th:replace="~{fragments/historyGraph :: maingraph}"></div>
+  </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
