--- a/src/main/resources/templates/page/index.html
+++ b/src/main/resources/templates/page/index.html
@@ -13,14 +13,36 @@
 <body>
     <header th:replace="~{layout/header :: header}"></header>
 
-    <main>
-        <div th:replace="~{fragments/exchange :: main}"></div>
-    </main>
+    <!--환전계산-->
+    <section>
+        <div th:replace="~{fragments/exchange :: main}">
+        </div>
+    </section>
+
+    <div class="container mt-4">
+        <div class="d-flex justify-content-between gap-3">
+            <!--그래프-->
+            <section class="w-50 p-3">
+                <div th:replace="~{fragments/historyGraph :: graph}"></div>
+            </section>
+
+            <!--환전상세-->
+            <section class="w-50 p-3">
+                <div th:replace="~{fragments/exchangeDetail :: detail}"></div>
+            </section>
+        </div>
+    </div>
+
+    <!--footer-->
+    <footer th:replace="~{layout/footer :: footer}"></footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- script -->
     <!-- 환전금액 단위 변경 -->
     <script src="/js/currencyDisplay.js"></script>
     <!-- 화전 계산 api -->
     <script src="/js/convert.js"></script>
+    <!-- 이번달 환율 api -->
+    <script src="/js/rateChart.js"></script>
 </body>
 </html>
