--- a/src/main/resources/templates/fragments/exchange.html
+++ b/src/main/resources/templates/fragments/exchange.html
@@ -19,7 +19,7 @@
                 <select class="form-select" id="fromCurrency">
                     <option value="KRW">🇰🇷 한국 원 (KRW)</option>
                     <option value="USD">🇺🇸 미국 달러 (USD)</option>
-                    <option value="EUR">🇪🇺 유로 (EUR)</option>
+                    <option value="EUR">🇪🇺 유럽 유로 (EUR)</option>
                     <option value="JPY">🇯🇵 일본 엔 (JPY)</option>
                     <option value="CNY">🇨🇳 중국 위안 (CNY)</option>
                     <option value="GBP">🇬🇧 영국 파운드 (GBP)</option>
@@ -42,7 +42,7 @@
                 <label for="toCurrency" class="form-label">환전할 통화</label>
                 <select class="form-select" id="toCurrency">
                     <option value="USD">🇺🇸 미국 달러 (USD)</option>
-                    <option value="EUR">🇪🇺 유로 (EUR)</option>
+                    <option value="EUR">🇪🇺 유럽 유로 (EUR)</option>
                     <option value="JPY">🇯🇵 일본 엔 (JPY)</option>
                     <option value="CNY">🇨🇳 중국 위안 (CNY)</option>
                     <option value="GBP">🇬🇧 영국 파운드 (GBP)</option>
