--- a/src/main/resources/templates/page/exchange-info.html
+++ b/src/main/resources/templates/page/exchange-info.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <title>exchange-info</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
 <header th:replace="~{layout/header :: header}"></header>
 
-<h1 th:text="${message}"></h1>
+<section>
+    <div th:replace="~{fragments/exchangeDetail :: maindetail}">
+    </div>
+</section>
 
+<footer th:replace="~{layout/footer :: footer}"></footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/updateBoxs.js"></script>
 </body>
 </html>
