--- a/src/main/resources/templates/page/index.html
+++ b/src/main/resources/templates/page/index.html
@@ -23,12 +23,12 @@
         <div class="d-flex justify-content-between gap-3">
             <!--그래프-->
             <section class="w-50 p-3">
-                <div th:replace="~{fragments/historyGraph :: graph}"></div>
+                <div th:replace="~{fragments/exchangeDetail :: detail1}"></div>
             </section>
 
             <!--환전상세-->
             <section class="w-50 p-3">
-                <div th:replace="~{fragments/exchangeDetail :: detail}"></div>
+                <div th:replace="~{fragments/exchangeDetail :: detail2}"></div>
             </section>
         </div>
     </div>
@@ -42,7 +42,7 @@
     <script src="/js/currencyDisplay.js"></script>
     <!-- 화전 계산 api -->
     <script src="/js/convert.js"></script>
-    <!-- 이번달 환율 api -->
+    <!-- 어제 환율 api -->
     <script src="/js/rateChart.js"></script>
 </body>
 </html>
