--- a/src/main/resources/templates/page/exchange-info.html
+++ b/src/main/resources/templates/page/exchange-info.html
@@ -17,6 +17,9 @@
 
 <footer th:replace="~{layout/footer :: footer}"></footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- box 정렬 -->
 <script src="js/updateBoxs.js"></script>
+<!-- 라이브 api -->
+<script src="js/todayDetail.js"></script>
 </body>
 </html>
