--- a/src/main/resources/templates/page/index.html
+++ b/src/main/resources/templates/page/index.html
@@ -6,9 +6,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <!-- chart -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
 </head>
 <body>
     <header th:replace="~{layout/header :: header}"></header>
@@ -21,12 +18,12 @@
 
     <div class="container mt-4">
         <div class="d-flex justify-content-between gap-3">
-            <!--그래프-->
+            <!--어제 환전 한국 기준 -->
             <section class="w-50 p-3">
                 <div th:replace="~{fragments/exchangeDetail :: detail1}"></div>
             </section>
 
-            <!--환전상세-->
+            <!--오늘 환전 한국 기준-->
             <section class="w-50 p-3">
                 <div th:replace="~{fragments/exchangeDetail :: detail2}"></div>
             </section>
@@ -42,7 +39,9 @@
     <script src="/js/currencyDisplay.js"></script>
     <!-- 화전 계산 api -->
     <script src="/js/convert.js"></script>
-    <!-- 어제 환율 api -->
-    <script src="/js/rateChart.js"></script>
+    <!-- 날짜 환율 api -->
+    <script src="/js/dateRate.js"></script>
+    <!-- 실시간 상세 환전 -->
+    <script src="/js/todayDetail.js"></script>
 </body>
 </html>
